[package]
name = "proc_memory"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
wbindings = {path = "wbindings"}
windows = "0.21.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.103"